<resources>
    <string name="app_name">Ficbook Chat</string>
    <string name="input_message_text">Введите текст сообщения</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="signin">Войти</string>
    <string name="need_a_help">Нужна помощь?</string>
    <string name="connecting">Подключение…</string>
    <string name="signingin">Авторизация…</string>
    <string name="select_room">Выберите комнату</string>
    <string name="online">В сети</string>
    <string name="press_again_to_exit">Нажмите ещё раз для выхода</string>
    <string name="close">Закрыть</string>
    <string name="disconnected">Соединение разорвано</string>
    <string name="joined">присоединился</string>
    <string name="left">покинул(а) чат</string>
    <string name="kiked">отключен администратором</string>
    <string name="exit">Выход</string>
    <string name="rooms">Комнаты</string>
    <string name="settings">Настройки</string>
    <string name="options">Опции</string>
    <string name="loading">Загрузка…</string>
    <string name="online_users">Сейчас в сети</string>
    <string name="need_restart">Необходим перезапуск приложения</string>
    <string name="create_room">Создать комнату</string>
    <string name="remove_room">Удалить комнату</string>
    <string name="input_room_name">Введите имя комнаты</string>
    <string name="banhammer">Забанить пользователя</string>
    <string name="reason">Причина</string>
    <string name="kik_confirm" formatted="false">Отключить пользователя %s?</string>
    <string name="kik">Отключить пользователя</string>
    <string name="this_is_you">Это вы</string>
    <string name="query_sent">Запрос отправлен</string>
    <string name="you_kiked">Вы отключены администратором</string>
    <string name="moder">Модератор</string>
    <string name="admin">Администратор</string>
    <string name="logout_confirm">Выйти из аккаунта?</string>
    <string name="accept">Принять</string>
    <string name="dismiss">Отклонить</string>
    <string name="rules">Запрещено:\n\n- Плохо себя вести\n- Обижать других\n- Флудить\n- Заниматься рекламой и самопиаром\n- Устраивать споры на политические и религиозные темы</string>
    <string name="login_empty">Введите логин</string>
    <string name="password_empty">Введите пароль</string>
    <string name="profile_info_fail">Не удалось загрузить данные профиля</string>
    <string name="no_profile_info">Нет информации о пользователе</string>
    <string name="remove_room_confirm">Вы уверены, что хотите удалить команту \"%s\"?\nЭто вызовет фатальные последствия</string>
    <string name="restarting">Перезапуск…</string>
    <string name="no_sound">Без звука</string>
    <string name="no_image">Нет изображения</string>
    <string name="select_image">Выбрать изображение</string>
    <string name="about" formatted="false">FicbookChat v%s</string>
    <string name="search">Поиск</string>
    <string name="enter_query">Введите запрос</string>
    <string name="nothing_found" formatted="false">По запросу \"%s\" ничего не найдено</string>
    <string name="search_results">результаты поиска</string>
    <string name="down">Вниз</string>
    <string name="no_connection">Нет подключения к сети</string>
    <string name="retry">Повторить</string>
    <string name="loading_image">Загрузка изображения…</string>
    <string name="unable_open_link">Не удалось открыть ссылку</string>
    <string name="size_calculating">Вычислние размера…</string>
    <string name="cache_size" formatted="false">Размер: %.2f Мб</string>
    <string name="cache_clearing">Очистка кэша…</string>
    <string name="loading_image_progress">Загрузка: %d%%</string>
    <string name="swype_to_close">Закрыть</string>
    <string name="fail_load">Не удалось загрузить</string>
    <string name="open_in_browser">Открыть в браузере</string>
    <string name="save">Сохранить</string>
    <string name="image_saved">Изображение сохранено</string>
    <string name="no_description">Нет описания</string>
    <string name="change_description">Изменить описание</string>
    <string name="banned_list">Активные баны</string>
    <string name="error">Произошла ошибка</string>
    <string name="no_active_bans">Нет активных банов</string>
    <string name="defurl">ws://146.120.111.42:7070</string>
    <plurals name="new_messages">
        <item quantity="one">%d новое сообщение</item>
        <item quantity="many">%d новых сообщений</item>
        <item quantity="other">Новых сообщений: %d</item>
    </plurals>

</resources>
