<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:fitsSystemWindows="true"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.nv95.fbchat.components.WallpaperView
                android:id="@+id/wallpaper"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                app:reverseLayout="true" />

            <LinearLayout
                android:id="@+id/dialog"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:background="?colorBackgroundFloating"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_gravity="center" />

                <ImageView
                    android:id="@+id/imageViewIcon"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:scaleType="fitCenter"
                    android:visibility="gone"/>

                <TextView
                    android:gravity="center"
                    android:id="@+id/textViewHolder"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="?android:textColorPrimary"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <android.support.v7.widget.AppCompatButton
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:id="@+id/buttonDismiss"
                    android:text="@string/close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <com.nv95.fbchat.components.recycler.GridRecyclerView
                android:id="@+id/recyclerViewEmoji"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black_80"
                android:layoutAnimation="@anim/emoji_layout"
                android:visibility="gone" />

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/buttonEmoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:padding="6dp"
                android:src="@drawable/ic_insert_emoticon_black_24dp" />

            <EditText
                android:id="@+id/editMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="top"
                android:hint="@string/input_message_text"
                android:inputType="textMultiLine|textCapSentences|textLongMessage"
                android:maxHeight="240dp"
                android:padding="10dp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="6dp"
                android:src="@drawable/ic_send_white_16dp"
                android:visibility="invisible"
                app:fabSize="mini" />

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer"
        app:theme="@style/ItemTextAppearance">

    </android.support.design.widget.NavigationView>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="296dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="?android:windowBackground">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:toolbarId="@id/toolbar">

                <TextView
                    android:id="@+id/textViewAbout"
                    android:padding="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="About\nabout2\nabout23232323" />

            </android.support.design.widget.CollapsingToolbarLayout>

            <TextView
                android:background="@color/black_60"
                android:padding="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/online_users"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewUsers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </android.support.design.widget.CoordinatorLayout>

</android.support.v4.widget.DrawerLayout>